--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <style>
     :root{
       --bg:#0b0b0b;
-      --panel:rgba(18,18,18,0.78);
       --logo-panel:rgba(18,18,18,0.65);
       --text:rgba(255,255,255,0.92);
       --muted:rgba(255,255,255,0.72);
@@ -41,9 +40,9 @@
       inset:0;
       background:linear-gradient(
         to bottom,
-        rgba(0,0,0,0.25) 0%,
-        rgba(0,0,0,0.60) 55%,
-        rgba(0,0,0,0.92) 100%
+        rgba(0,0,0,0.15) 0%,
+        rgba(0,0,0,0.45) 55%,
+        rgba(0,0,0,0.80) 100%
       );
     }
 
@@ -61,25 +60,22 @@
       position:relative;
       width:100%;
       max-width:var(--max);
-      background:var(--panel);
-      border-radius:18px;
       padding:34px 36px 30px;
-      backdrop-filter:blur(10px);
-      -webkit-backdrop-filter:blur(10px);
-      box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
     /* LOGO */
     .logo-wrap{
-      display:inline-block;
-      padding:10px 12px;
-      border-radius:5px;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding:14px 16px;
+      border-radius:14px;
       background:var(--logo-panel);
-      margin-bottom:0px;
+      margin-bottom:18px;
     }
 
     .logo{
-      width:200px;
+      width:120px;
       height:auto;
       display:block;
     }
@@ -95,6 +91,7 @@
       font-size:16px;
       line-height:1.5;
       color:var(--muted);
+      max-width:640px;
     }
 
     main{
@@ -197,7 +194,9 @@
     </div>
 
     <h1>Millionaire Minds</h1>
-    <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
+    <p class="tagline">
+      A weekly environment for clarity, skill-building, and long-term growth.
+    </p>
 
   </div>
 </header>
