--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root{
       --bg:#0b0b0b;
-      --logo-panel:rgba(18,18,18,0.65);
+      --panel:rgba(18,18,18,0.78);
       --text:rgba(255,255,255,0.92);
       --muted:rgba(255,255,255,0.72);
       --line:rgba(255,255,255,0.10);
@@ -40,9 +40,9 @@
       inset:0;
       background:linear-gradient(
         to bottom,
-        rgba(0,0,0,0.15) 0%,
-        rgba(0,0,0,0.45) 55%,
-        rgba(0,0,0,0.80) 100%
+        rgba(0,0,0,0.25) 0%,
+        rgba(0,0,0,0.60) 55%,
+        rgba(0,0,0,0.92) 100%
       );
     }
 
@@ -53,111 +53,128 @@
       right:0;
       bottom:-1px;
       height:160px;
-      background:linear-gradient(to bottom, rgba(11,11,11,0), var(--bg));
+      background:linear-gradient(
+        to bottom,
+        rgba(11,11,11,0) 0%,
+        var(--bg) 100%
+      );
     }
 
     .Porsche-inner{
       position:relative;
       width:100%;
       max-width:var(--max);
-      padding:34px 36px 30px;
+      background:var(--panel);
+      border-radius:14px;
+      padding:28px 32px 24px;
+      backdrop-filter:blur(10px);
+      -webkit-backdrop-filter:blur(10px);
+      box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* LOGO */
-    .logo-wrap{
-  display:inline-block;
-  width:fit-content;
-  padding:0px;
-  border-radius:5px;
-  background:var(--logo-panel);
-  margin-bottom:5px;
-}
+    /* HERO CONTENT */
+    .hero-layout{
+      max-width:820px;
+    }
 
-    .logo{
-      width:180px;
+    .hero-text{
+      text-align:left;
+    }
+
+    .hero-title-wrap{
+      position:relative;
+      display:inline-block;
+    }
+
+    /* LOGO — larger, lifted, seamless contrast */
+    .hero-mark-float{
+      position:absolute;
+      left:0;
+      top:-88px;
+      width:144px;
       height:auto;
-      display:block;
+      padding:14px 16px;
+      border-radius:14px;
+
+      background:linear-gradient(
+        to bottom,
+        rgba(0,0,0,0.55),
+        rgba(0,0,0,0.15)
+      );
+      backdrop-filter:blur(6px);
+      -webkit-backdrop-filter:blur(6px);
+
+      opacity:0.98;
+      filter:drop-shadow(0 18px 42px rgba(0,0,0,0.55));
+      pointer-events:none;
+      user-select:none;
     }
 
-    h1{
-      margin:0 0 10px;
-      font-size:46px;
+    .hero-title{
+      margin:0 0 6px;
+      font-size:42px;
       letter-spacing:0.2px;
     }
 
     .tagline{
       margin:0;
+      color:var(--muted);
       font-size:16px;
       line-height:1.5;
-      color:var(--muted);
-      max-width:640px;
     }
 
+    @media (max-width:720px){
+      .hero-mark-float{
+        top:-72px;
+        width:112px;
+        padding:12px 14px;
+      }
+      .hero-title{
+        font-size:36px;
+      }
+    }
+
+    /* MAIN */
     main{
       max-width:var(--max);
       margin:0 auto;
-      padding:44px 20px 100px;
+      padding:36px 20px 90px;
       line-height:1.75;
       font-size:18px;
     }
 
-    section{
-      margin:0 0 54px;
-    }
+    section{margin:0 0 44px;}
+    h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
+    p{margin:0 0 22px;color:var(--text);}
 
-    h2{
-      margin:0 0 16px;
-      font-size:22px;
-      letter-spacing:0.2px;
-    }
+    #vision p{margin-bottom:28px;}
 
-    p{
-      margin:0 0 22px;
-    }
-
-    #vision p{
-      margin-bottom:28px;
-    }
-
-    .rule{
-      height:1px;
-      background:var(--line);
-      margin:18px 0 22px;
-    }
+    .rule{height:1px;background:var(--line);margin:16px 0 18px;}
 
     .callout{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:20px;
+      padding:18px;
       background:rgba(255,255,255,0.03);
     }
 
-    ul{
-      margin:10px 0 0 20px;
-      padding:0;
-    }
-
-    li{
-      margin:10px 0;
-    }
+    ul{margin:10px 0 0 20px;padding:0;}
+    li{margin:10px 0;}
 
     .two-col{
       display:grid;
       grid-template-columns:1fr;
-      gap:16px;
+      gap:14px;
     }
 
     @media(min-width:860px){
-      .two-col{
-        grid-template-columns:1fr 1fr;
-        gap:20px;
-      }
+      .two-col{grid-template-columns:1fr 1fr;gap:18px;}
     }
 
     .card{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:20px;
+      padding:18px;
       background:rgba(255,255,255,0.02);
     }
 
@@ -172,14 +189,11 @@
     .cta{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:20px;
+      padding:18px;
       background:rgba(255,255,255,0.03);
     }
 
-    .cta strong{
-      display:block;
-      margin-bottom:6px;
-    }
+    .cta strong{display:block;margin-bottom:6px;}
   </style>
 </head>
 
@@ -187,16 +201,21 @@
 
 <header class="Porsche">
   <div class="Porsche-inner">
-
-    <div class="logo-wrap">
-      <img src="MM - White no BKGD.png" alt="Millionaire Minds Logo" class="logo" />
+    <div class="hero-layout">
+      <div class="hero-text">
+        <div class="hero-title-wrap">
+          <img
+            class="hero-mark-float"
+            src="MM - White no BKGD.png"
+            alt=""
+          />
+          <h1 class="hero-title">Millionaire Minds</h1>
+        </div>
+        <p class="tagline">
+          A weekly environment for clarity, skill-building, and long-term growth.
+        </p>
+      </div>
     </div>
-
-    <h1>Millionaire Minds</h1>
-    <p class="tagline">
-      A weekly environment for clarity, skill-building, and long-term growth.
-    </p>
-
   </div>
 </header>
 
@@ -204,7 +223,6 @@
 
 <section id="vision">
   <h2>The Vision</h2>
-
   <p>Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.</p>
 
   <p>To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.</p>
@@ -226,7 +244,6 @@
 
 <section id="why">
   <h2>Why This Group Exists</h2>
-
   <p>Many people want more from life but lack:</p>
   <ul>
     <li>Structure</li>
@@ -234,93 +251,19 @@
     <li>Consistency</li>
     <li>A community that supports growth without pressure</li>
   </ul>
-
-  <p style="margin-top:18px;">Millionaire Minds was created to fill that gap by bringing similar-minded people together who want to grow with intention and consistency.</p>
-
-  <p>By meeting weekly, reflecting honestly, and learning together, members begin to:</p>
-  <ul>
-    <li>Understand where they are going</li>
-    <li>Identify what actually matters to them</li>
-    <li>Build confidence through action, not comparison</li>
-  </ul>
-</section>
-
-<section id="what-it-is">
-  <h2>What Millionaire Minds Is (and Isn’t)</h2>
-
-  <div class="two-col">
-    <div class="card">
-      <p class="label">This group is</p>
-      <ul>
-        <li>Thoughtful</li>
-        <li>Practical</li>
-        <li>Skill-focused</li>
-        <li>Long-term oriented</li>
-        <li>Collaborative, not competitive</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <p class="label">This group is not</p>
-      <ul>
-        <li>A get-rich-quick space</li>
-        <li>A motivational hype circle</li>
-        <li>A comparison-based environment</li>
-        <li>A place to impress others</li>
-      </ul>
-    </div>
-  </div>
-
-  <p style="margin-top:18px;">Growth here is quiet, intentional, and personal.</p>
-</section>
-
-<section id="skills">
-  <h2>Skills & Areas of Growth</h2>
-
-  <p>Members often work on areas such as:</p>
-  <ul>
-    <li>Personal discipline and consistency</li>
-    <li>Communication and confidence</li>
-    <li>Financial literacy and decision-making</li>
-    <li>Career and technical skill development</li>
-    <li>Healthy routines and habits</li>
-    <li>Focus, clarity, and follow-through</li>
-  </ul>
-
-  <p style="margin-top:18px;">Everyone’s path is different. The group supports direction, not uniformity.</p>
-</section>
-
-<section id="ripple">
-  <h2>The Ripple Effect</h2>
-
-  <p>As individuals grow, the impact extends far beyond the weekly meetings.</p>
-  <p>Clearer thinking leads to better decisions. Better decisions improve careers, relationships, and well-being. Those changes naturally influence families, teams, and communities.</p>
-  <p>Millionaire Minds is designed to create positive ripple effects, one person at a time.</p>
-</section>
-
-<section id="who">
-  <h2>Who This Is For</h2>
-
-  <p>This group is for people who:</p>
-  <ul>
-    <li>Want to be more intentional with their time and energy</li>
-    <li>Value growth over appearance</li>
-    <li>Are willing to reflect honestly</li>
-    <li>Want to build skills and habits that compound over years, not weeks—alongside others on a similar path</li>
-  </ul>
-
-  <p style="margin-top:18px;">No prior experience is required—only curiosity and willingness.</p>
 </section>
 
 <section id="join">
   <h2>Interested in Joining?</h2>
-
   <div class="cta">
     <strong>If this vision resonates, you’re invited to learn more or express interest.</strong>
-    <p style="margin:0;color:var(--muted);">A simple contact method can live here when you’re ready.</p>
+    <p style="margin:0;color:var(--muted);">
+      For now, you can add a contact method here (a form, a link, or a simple instruction).
+    </p>
   </div>
 </section>
 
 </main>
+
 </body>
 </html>
