--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
   <meta charset="UTF-8" />
   <title>Millionaire Minds</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <style>
     :root{
       --bg:#0b0b0b;
-      --panel:rgba(18,18,18,0.78);
+      --panel:rgba(18,18,18,0.70);
       --text:rgba(255,255,255,0.92);
-      --muted:rgba(255,255,255,0.72);
+      --muted:rgba(255,255,255,0.70);
       --line:rgba(255,255,255,0.10);
       --max: 920px;
+
+      --card-radius:18px;
+      --card-pad-x:28px;
+      --card-pad-y:26px;
     }
 
-    body{
-      margin:0;
-      font-family:Arial,sans-serif;
-      background:var(--bg);
-      color:var(--text);
-    }
+    *{box-sizing:border-box;}
+    body{margin:0;font-family:Arial,sans-serif;background:var(--bg);color:var(--text);}
 
     /* HERO */
     .Porsche{
@@ -37,15 +36,19 @@
       content:"";
       position:absolute;
       inset:0;
-      background:linear-gradient(to bottom,
-        rgba(0,0,0,0.25) 0%,
-        rgba(0,0,0,0.60) 55%,
-        rgba(0,0,0,0.92) 100%);
+      /* Keep Porsche lettering readable while preserving contrast for text */
+      background:linear-gradient(
+        to bottom,
+        rgba(0,0,0,0.05) 0%,
+        rgba(0,0,0,0.35) 55%,
+        rgba(0,0,0,0.80) 100%
+      );
     }
     .Porsche::after{
       content:"";
       position:absolute;
-      left:0;right:0;bottom:-1px;height:160px;
+      left:0;right:0;bottom:-1px;
+      height:140px;
       background:linear-gradient(to bottom, rgba(11,11,11,0) 0%, var(--bg) 100%);
     }
 
@@ -53,66 +56,49 @@
       position:relative;
       width:100%;
       max-width:var(--max);
+    }
+
+    /* Logo sits ABOVE the card so it never blocks Porsche lettering */
+    .brand-mark{
+      display:inline-block;
+      width:fit-content;
+      padding:6px;
+      border-radius:12px;
+      background:rgba(0,0,0,0.35);
+      backdrop-filter:blur(8px);
+      -webkit-backdrop-filter:blur(8px);
+      box-shadow:0 10px 30px rgba(0,0,0,0.35);
+      margin:0 0 10px 10px; /* slight inset from card edge */
+    }
+    .brand-mark img{
+      display:block;
+      width:56px;
+      height:auto;
+    }
+
+    .hero-card{
       background:var(--panel);
-      border-radius:14px;
-      padding:28px 32px 24px;
+      border-radius:var(--card-radius);
+      padding:var(--card-pad-y) var(--card-pad-x) calc(var(--card-pad-y) + 2px);
       backdrop-filter:blur(10px);
       -webkit-backdrop-filter:blur(10px);
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* HERO CONTENT: left-weighted, logo floats above title */
-    .hero-layout{
-      max-width:820px;
-    }
-
-    .hero-text{
-      text-align:left;
-    }
-
-    .hero-title-wrap{
-      position:relative;
-      display:inline-block; /* keeps the logo aligned to the title block */
-    }
-
-    /* IMPORTANT:
-       For the premium look you described, this file MUST be a transparent PNG of the WHITE MARK ONLY.
-       Put it in the repo root and name it exactly: mm-mark.png
-    */
-    .hero-mark-float{
-      position:absolute;
-      left:0;
-      top:-46px; /* adjust -40 to -52 if you want closer/farther from the title */
-      width:96px; /* adjust size here */
-      height:auto;
-      opacity:0.96;
-      filter:drop-shadow(0 18px 48px rgba(0,0,0,0.45));
-      pointer-events:none;
-      user-select:none;
-    }
-
-    .hero-title{
-      margin:0 0 6px;
-      font-size:42px;
+    h1{
+      margin:0 0 10px;
+      font-size:56px;
       letter-spacing:0.2px;
+      line-height:1.06;
     }
-
     .tagline{
       margin:0;
       color:var(--muted);
-      font-size:16px;
-      line-height:1.5;
+      font-size:18px;
+      line-height:1.55;
     }
 
-    @media (max-width:720px){
-      .hero-mark-float{
-        top:-38px;
-        width:80px;
-      }
-      .hero-title{font-size:36px;}
-    }
-
-    /* MAIN */
+    /* BODY */
     main{
       max-width:var(--max);
       margin:0 auto;
@@ -123,15 +109,13 @@
     section{margin:0 0 44px;}
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
     p{margin:0 0 22px;color:var(--text);}
-
-    /* Vision-specific spacing */
     #vision p{margin-bottom:28px;}
 
     .rule{height:1px;background:var(--line);margin:16px 0 18px;}
     .callout{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:18px;
+      padding:18px 18px;
       background:rgba(255,255,255,0.03);
     }
     ul{margin:10px 0 0 20px;padding:0;color:var(--text);}
@@ -143,39 +127,46 @@
     .card{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:18px;
+      padding:18px 18px;
       background:rgba(255,255,255,0.02);
     }
-    .label{
-      font-size:13px;
-      letter-spacing:0.12em;
-      text-transform:uppercase;
-      color:var(--muted);
-      margin:0 0 10px;
-    }
+    .label{font-size:13px;letter-spacing:0.12em;text-transform:uppercase;color:var(--muted);margin:0 0 10px;}
     .cta{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:18px;
+      padding:18px 18px;
       background:rgba(255,255,255,0.03);
     }
     .cta strong{display:block;margin-bottom:6px;}
+
+    /* Responsive polish */
+    @media (max-width:640px){
+      :root{
+        --card-radius:16px;
+        --card-pad-x:18px;
+        --card-pad-y:18px;
+      }
+      .Porsche{min-height:82vh;padding:84px 16px 56px;}
+      .brand-mark{margin:0 0 10px 6px;}
+      .brand-mark img{width:52px;}
+      h1{font-size:40px;line-height:1.08;}
+      .tagline{font-size:16px;}
+      main{font-size:17px;}
+    }
   </style>
 </head>
-
 <body>
 
-  <!-- Porsche (Hero) -->
+  <!-- HERO -->
   <header class="Porsche">
     <div class="Porsche-inner">
-      <div class="hero-layout">
-        <div class="hero-text">
-          <div class="hero-title-wrap">
-            <img class="hero-mark-float" src="mm-mark.png" alt="" />
-            <h1 class="hero-title">Millionaire Minds</h1>
-          </div>
-          <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
-        </div>
+      <div class="brand-mark" aria-hidden="true">
+        <img src="MM - White Transparent.png" alt="" />
+      </div>
+
+      <div class="hero-card">
+        <h1>Millionaire Minds</h1>
+        <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
       </div>
     </div>
   </header>
