--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       content:"";
       position:absolute;
       inset:0;
-      /* preserve Porsche lettering while keeping text readable */
       background:linear-gradient(
         to bottom,
         rgba(0,0,0,0.05) 0%,
@@ -54,32 +53,40 @@
       max-width:var(--max);
     }
 
-    /* The card (matches your reference: wide, soft, not oversized) */
+    /* HERO CARD (clean, no heavy border riding into Porsche text) */
     .hero-card{
       width:100%;
       background:var(--panel);
       border-radius:18px;
       padding:18px 26px 22px;
+
       backdrop-filter:blur(10px);
       -webkit-backdrop-filter:blur(10px);
+
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* Logo sits INSIDE the card, top-left */
+    /* LOGO BOX: ONLY this area has the dark rounded background */
     .hero-brand{
       display:inline-block;
       width:fit-content;
-      padding:6px;
-      border-radius:12px;
-      background:rgba(0,0,0,0.34);
+
+      padding:10px;                /* slightly more breathing room now */
+      border-radius:16px;
+
+      background:rgba(0,0,0,0.45); /* tighter + richer contrast */
       backdrop-filter:blur(8px);
       -webkit-backdrop-filter:blur(8px);
+
       box-shadow:0 10px 26px rgba(0,0,0,0.35);
-      margin:0 0 12px 2px;
+
+      margin:0 0 12px 2px;         /* SAME position as before */
     }
+
+    /* ✅ DOUBLE SIZE (2x) */
     .hero-brand img{
       display:block;
-      width:52px;
+      width:104px;   /* was ~52px */
       height:auto;
     }
 
@@ -137,12 +144,12 @@
     }
     .cta strong{display:block;margin-bottom:6px;}
 
-    /* Mobile: keep the same “look”, just scaled */
+    /* Mobile scaling: stays consistent */
     @media (max-width:640px){
       .Porsche{min-height:82vh;padding:84px 16px 56px;}
       .hero-card{border-radius:16px;padding:16px 18px 18px;}
       .hero-brand{margin:0 0 10px 0;}
-      .hero-brand img{width:50px;}
+      .hero-brand img{width:96px;} /* slightly smaller than desktop but still ~2x */
       h1{font-size:40px;line-height:1.10;}
       .tagline{font-size:15px;}
       main{font-size:17px;}
