--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
       display:flex;
       align-items:flex-end;
       justify-content:center;
-      padding:90px 20px 60px;
+
+      /* Key change: lower the whole card so PORSCHE lettering stays visible */
+      padding:140px 20px 60px;
+
       overflow:hidden;
       background:url("Porsche.JPG") center/cover no-repeat;
     }
+
     .Porsche::before{
       content:"";
       position:absolute;
@@ -35,10 +39,11 @@
       background:linear-gradient(
         to bottom,
         rgba(0,0,0,0.05) 0%,
-        rgba(0,0,0,0.30) 52%,
-        rgba(0,0,0,0.78) 100%
+        rgba(0,0,0,0.26) 52%,
+        rgba(0,0,0,0.72) 100%
       );
     }
+
     .Porsche::after{
       content:"";
       position:absolute;
@@ -53,12 +58,14 @@
       max-width:var(--max);
     }
 
-    /* HERO CARD (clean, no heavy border riding into Porsche text) */
+    /* HERO CARD — reduced height/padding so it doesn't creep upward */
     .hero-card{
       width:100%;
       background:var(--panel);
       border-radius:18px;
-      padding:18px 26px 22px;
+
+      /* Slightly smaller top padding so it doesn't rise */
+      padding:16px 26px 22px;
 
       backdrop-filter:blur(10px);
       -webkit-backdrop-filter:blur(10px);
@@ -66,36 +73,37 @@
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* LOGO BOX: ONLY this area has the dark rounded background */
+    /* LOGO BOX — ONLY behind the logo, no extra border anywhere */
     .hero-brand{
       display:inline-block;
       width:fit-content;
 
-      padding:10px;                /* slightly more breathing room now */
+      padding:10px;
       border-radius:16px;
 
-      background:rgba(0,0,0,0.45); /* tighter + richer contrast */
+      background:rgba(0,0,0,0.38);
       backdrop-filter:blur(8px);
       -webkit-backdrop-filter:blur(8px);
 
-      box-shadow:0 10px 26px rgba(0,0,0,0.35);
+      box-shadow:0 10px 26px rgba(0,0,0,0.30);
 
-      margin:0 0 12px 2px;         /* SAME position as before */
+      /* Lower the logo INSIDE the card */
+      margin:12px 0 16px 2px;
     }
 
-    /* ✅ DOUBLE SIZE (2x) */
     .hero-brand img{
       display:block;
-      width:104px;   /* was ~52px */
+      width:104px;
       height:auto;
     }
 
     h1{
       margin:0 0 10px;
-      font-size:44px;
+      font-size:35px;
       letter-spacing:0.2px;
       line-height:1.10;
     }
+
     .tagline{
       margin:0;
       color:var(--muted);
@@ -111,6 +119,7 @@
       line-height:1.75;
       font-size:18px;
     }
+
     section{margin:0 0 44px;}
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
     p{margin:0 0 22px;color:var(--text);}
@@ -123,34 +132,63 @@
       padding:18px 18px;
       background:rgba(255,255,255,0.03);
     }
+
     ul{margin:10px 0 0 20px;padding:0;color:var(--text);}
     li{margin:10px 0;}
+
     .two-col{display:grid;grid-template-columns:1fr;gap:14px;}
     @media(min-width:860px){
       .two-col{grid-template-columns:1fr 1fr;gap:18px;}
     }
+
     .card{
       border:1px solid var(--line);
       border-radius:12px;
       padding:18px 18px;
       background:rgba(255,255,255,0.02);
     }
-    .label{font-size:13px;letter-spacing:0.12em;text-transform:uppercase;color:var(--muted);margin:0 0 10px;}
+
+    .label{
+      font-size:13px;
+      letter-spacing:0.12em;
+      text-transform:uppercase;
+      color:var(--muted);
+      margin:0 0 10px;
+    }
+
     .cta{
       border:1px solid var(--line);
       border-radius:12px;
       padding:18px 18px;
       background:rgba(255,255,255,0.03);
     }
+
     .cta strong{display:block;margin-bottom:6px;}
 
-    /* Mobile scaling: stays consistent */
+    /* Mobile (keeps same look and ALSO protects the Porsche lettering) */
     @media (max-width:640px){
-      .Porsche{min-height:82vh;padding:84px 16px 56px;}
-      .hero-card{border-radius:16px;padding:16px 18px 18px;}
-      .hero-brand{margin:0 0 10px 0;}
-      .hero-brand img{width:96px;} /* slightly smaller than desktop but still ~2x */
-      h1{font-size:40px;line-height:1.10;}
+      .Porsche{
+        min-height:82vh;
+
+        /* Key: push the card lower on mobile too */
+        padding:130px 16px 56px;
+      }
+
+      .hero-card{
+        border-radius:16px;
+        padding:14px 18px 18px;
+      }
+
+      .hero-brand{
+        margin:10px 0 14px 0;
+        padding:10px;
+      }
+
+      .hero-brand img{
+        width:96px;
+      }
+
+      h1{font-size:35px;line-height:1.10;}
       .tagline{font-size:15px;}
       main{font-size:17px;}
     }
