--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
       display:flex;
       align-items:flex-end;
       justify-content:center;
-
-      /* Key change: lower the whole card so PORSCHE lettering stays visible */
       padding:140px 20px 60px;
-
       overflow:hidden;
       background:url("Porsche.JPG") center/cover no-repeat;
     }
-
     .Porsche::before{
       content:"";
       position:absolute;
@@ -43,7 +39,6 @@
         rgba(0,0,0,0.72) 100%
       );
     }
-
     .Porsche::after{
       content:"";
       position:absolute;
@@ -58,26 +53,10 @@
       max-width:var(--max);
     }
 
-    /* HERO CARD — reduced height/padding so it doesn't creep upward */
-    .hero-card{
-      width:100%;
-      background:var(--panel);
-      border-radius:18px;
-
-      /* Slightly smaller top padding so it doesn't rise */
-      padding:16px 26px 22px;
-
-      backdrop-filter:blur(10px);
-      -webkit-backdrop-filter:blur(10px);
-
-      box-shadow:0 18px 60px rgba(0,0,0,0.45);
-    }
-
-    /* LOGO BOX — ONLY behind the logo, no extra border anywhere */
+    /* ✅ Logo sits ABOVE the blur panel now */
     .hero-brand{
       display:inline-block;
       width:fit-content;
-
       padding:10px;
       border-radius:16px;
 
@@ -87,8 +66,7 @@
 
       box-shadow:0 10px 26px rgba(0,0,0,0.30);
 
-      /* Lower the logo INSIDE the card */
-      margin:12px 0 16px 2px;
+      margin:30px 0 14px 2px;
     }
 
     .hero-brand img{
@@ -97,9 +75,22 @@
       height:auto;
     }
 
+    /* ✅ Blur panel now ONLY covers title + description */
+    .hero-card{
+      width:100%;
+      background:var(--panel);
+      border-radius:18px;
+      padding:18px 26px 22px;
+
+      backdrop-filter:blur(10px);
+      -webkit-backdrop-filter:blur(10px);
+
+      box-shadow:0 18px 60px rgba(0,0,0,0.45);
+    }
+
     h1{
       margin:0 0 10px;
-      font-size:35px;
+      font-size:44px;
       letter-spacing:0.2px;
       line-height:1.10;
     }
@@ -165,22 +156,15 @@
 
     .cta strong{display:block;margin-bottom:6px;}
 
-    /* Mobile (keeps same look and ALSO protects the Porsche lettering) */
+    /* Mobile scaling */
     @media (max-width:640px){
       .Porsche{
         min-height:82vh;
-
-        /* Key: push the card lower on mobile too */
         padding:130px 16px 56px;
       }
 
-      .hero-card{
-        border-radius:16px;
-        padding:14px 18px 18px;
-      }
-
       .hero-brand{
-        margin:10px 0 14px 0;
+        margin:10px 0 12px 0;
         padding:10px;
       }
 
@@ -188,7 +172,12 @@
         width:96px;
       }
 
-      h1{font-size:35px;line-height:1.10;}
+      .hero-card{
+        border-radius:16px;
+        padding:16px 18px 18px;
+      }
+
+      h1{font-size:40px;line-height:1.10;}
       .tagline{font-size:15px;}
       main{font-size:17px;}
     }
@@ -199,14 +188,18 @@
   <!-- HERO -->
   <header class="Porsche">
     <div class="Porsche-inner">
-      <div class="hero-card">
-        <div class="hero-brand" aria-hidden="true">
-          <img src="MM - White Transparent.png" alt="" />
-        </div>
 
+      <!-- ✅ Logo is outside the blurred title panel now -->
+      <div class="hero-brand" aria-hidden="true">
+        <img src="MM - White Transparent.png" alt="" />
+      </div>
+
+      <!-- ✅ Blur ONLY covers title + description -->
+      <div class="hero-card">
         <h1>Millionaire Minds</h1>
         <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
       </div>
+
     </div>
   </header>
 
