--- a/index.html
+++ b/index.html
@@ -153,34 +153,43 @@
       border-radius:12px;
       padding:18px 18px;
       background:rgba(255,255,255,0.03);
+      text-align:center; /* ✅ center the button in the box */
     }
 
-    .cta strong{display:block;margin-bottom:10px;}
+    .cta strong{
+      display:block;
+      margin-bottom:12px;
+      text-align:left; /* keep your headline aligned nicely */
+    }
 
-    /* ✅ Premium CTA button */
+    /* ✅ Bigger, higher-contrast, premium CTA button */
     .cta-button{
       display:inline-flex;
       align-items:center;
       justify-content:center;
 
-      padding:12px 16px;
-      border-radius:12px;
+      padding:18px 34px; /* ✅ ~2x size */
+      border-radius:16px;
 
-      border:1px solid rgba(255,255,255,0.16);
-      background:rgba(255,255,255,0.05);
-      color:rgba(255,255,255,0.90);
+      background:rgba(255,255,255,0.92); /* ✅ strong contrast */
+      color:rgba(0,0,0,0.88);
 
+      border:1px solid rgba(255,255,255,0.25);
       text-decoration:none;
-      font-size:15px;
-      letter-spacing:0.2px;
 
-      transition:transform 160ms ease, background 160ms ease, border-color 160ms ease;
+      font-size:17px;
+      font-weight:700;
+      letter-spacing:0.3px;
+
+      box-shadow:0 16px 40px rgba(0,0,0,0.40);
+
+      transition:transform 160ms ease, filter 160ms ease, box-shadow 160ms ease;
     }
 
     .cta-button:hover{
-      background:rgba(255,255,255,0.08);
-      border-color:rgba(255,255,255,0.22);
-      transform:translateY(-1px);
+      transform:translateY(-2px);
+      filter:brightness(1.02);
+      box-shadow:0 20px 48px rgba(0,0,0,0.50);
     }
 
     .cta-button:active{
@@ -218,7 +227,11 @@
 
       .cta-button{
         width:100%;
-        padding:12px 14px;
+        padding:18px 18px;
+      }
+
+      .cta strong{
+        text-align:left;
       }
     }
   </style>
@@ -358,7 +371,7 @@
         <strong>If this vision resonates, you’re invited to learn more or express interest.</strong>
 
         <a class="cta-button" href="https://forms.gle/dKHv2qPyoKybjTj37" target="_blank" rel="noopener">
-          Express Interest
+          Click to Join
         </a>
       </div>
     </section>
